compiler/testData/diagnostics/tests/inference/kt11963.fir.kt
<!MUST_BE_INITIALIZED!>val <<!TYPE_PARAMETER_OF_PROPERTY_NOT_USED_IN_RECEIVER!>T : <!UNRESOLVED_REFERENCE!>KClass<!><T>.something<!>> abc<!>
